@@ -1,4 +1,7 @@
 [11.22] released ...
+* When a message part of content-type text/anything is written with the
+  pipe-type/subtype mechanism, it is now converted to the character encoding
+  of the locale (as it was before 11.14 or so).
 * In threaded mode, the thread structure is now shown using line-drawing
   characters in the header summary.
 * When using a hostname with a port number attached with SMTP STARTTLS,
